# ERPKit

./: ACKNOWLEDGEMENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
docs/: BADGES.md  LICENSE_RATIONALE.md  REPOSITORY_STRUCTURE.md
examples/: run_invoice_pipeline.py
examples/data/: invoice_extract.csv  vendor_master.csv
src/erpkit/: __init__.py
src/erpkit/core/: __init__.py  exceptions.py  result.py  validator.py
src/erpkit/metadata/examples/: invoice_schema.json  journal_schema.json  supplier_schema.json
src/erpkit/pipeline/: __init__.py  financial_pipeline.py
tests/: conftest.py  test_exceptions.py  test_pipeline.py  test_result.py  test_validator.py
