[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erpkit"
version = "0.1.0"
description = "The enterprise standard library for business transaction processing — ERP-neutral validation, transformation, and pipeline orchestration on Polars/Arrow."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Harish" }]
keywords = [
    "erp", "validation", "polars", "arrow", "data-quality",
    "reconciliation", "finance", "invoice", "vendor", "etl",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "polars>=0.20",
]

[project.optional-dependencies]
oracle = ["oracledb>=2.0", "sqlalchemy>=2.0"]
postgres = ["psycopg[binary]>=3.1", "sqlalchemy>=2.0"]
mssql = ["pyodbc>=5.0", "sqlalchemy>=2.0"]
mysql = ["pymysql>=1.1", "sqlalchemy>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.0",
]

[project.urls]
Homepage = "https://github.com/erpkit/erpkit"
Documentation = "https://github.com/erpkit/erpkit#readme"
Issues = "https://github.com/erpkit/erpkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/erpkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=erpkit --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
